--- a/DockerDefinitivo.Spa/src/index.html
+++ b/DockerDefinitivo.Spa/src/index.html
@@ -6,6 +6,11 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Montserrat:300&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+  <script src="https://kit.fontawesome.com/274fe18f55.js" crossorigin="anonymous">
+  </script>
+ 
 </head>
 <body>
   <app-root></app-root>
